tests/meta_property/meta_property.exp
Error ----------------------------------------------------------------------------------------------- import_meta.js:6:2

Cannot cast `import.meta` to number literal `1` because `Import$Meta` [1] is incompatible with number literal `1` [2].
[incompatible-cast]

   import_meta.js:6:2
      6| (import.meta: 1); // Error
          ^^^^^^^^^^^

References:
   <BUILTINS>/core.js:2571:20
                            v
   2571| type Import$Meta = {
   2572|   url?: string,
   2573|   ...
   2574| };
         ^ [1]
   import_meta.js:6:15
      6| (import.meta: 1); // Error
                       ^ [2]


Error ---------------------------------------------------------------------------------------------- import_meta.js:7:13

Cannot get `import.meta.xxx` because property `xxx` is missing in `Import$Meta` [1]. [prop-missing]

   import_meta.js:7:13
      7| import.meta.xxx; // Error
                     ^^^

References:
   <BUILTINS>/core.js:2571:20
                            v
   2571| type Import$Meta = {
   2572|   url?: string,
   2573|   ...
   2574| };
         ^ [1]


Error ------------------------------------------------------------------------------------------------ new_target.js:5:4

Cannot cast `new.target` to boolean because mixed [1] is incompatible with boolean [2]. [incompatible-cast]

   new_target.js:5:4
   5|   (new.target: boolean); // Error
         ^^^^^^^^^^ [1]

References:
   new_target.js:5:16
   5|   (new.target: boolean); // Error
                     ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- new_target.js:13:6

Cannot cast `new.target` to boolean because mixed [1] is incompatible with boolean [2]. [incompatible-cast]

   new_target.js:13:6
   13|     (new.target: boolean); // Error
            ^^^^^^^^^^ [1]

References:
   new_target.js:13:18
   13|     (new.target: boolean); // Error
                        ^^^^^^^ [2]



Found 4 errors
